Cleaned up code and fixed alignment

--- a/src/styles/Game.css
+++ b/src/styles/Game.css
@@ -4,9 +4,17 @@
     justify-content: center;
     min-height: 100vh;
   }
+
+  .header {
+    font-size: 2.8rem;
+    font-weight: 600;
+    margin-bottom: 1rem;
+    position: absolute;
+    top: 25%;
+    left: 40%;
+  }
   
   .stylish-button {
-    /* Add your desired button styling here */
     background-color: purple;
     color: white;
     font-size: 1.2rem;
@@ -15,39 +23,35 @@
     border: none;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
     transition: all 0.2s ease-in-out;
+    position: absolute;
+    top: 55%;
+    left: 41%;
   }
   
-  .stylish-button:hover {
-    /* Add hover styling for button */
+  .stylish-button:hover { 
     transform: translateY(-2px);
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.25);
   }
   
   .stylish-button:active {
-    /* Add active styling for button */
     transform: translateY(2px);
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.25);
   }
-  
-  .animated {
-    animation-duration: 1s;
-    animation-fill-mode: both;
+  .display-message {
+    font-size: 1.3rem;
+    font-weight: 500;
+    margin-bottom: 6rem;
+    position: absolute;
+    top: 61%;
+    left: 41%;
   }
-  
-  .fadeIn {
-    animation-name: fadeIn;
-  }
-  
-  @keyframes fadeIn {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
+  .form {
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin-bottom: 1rem;
+    
   }
   .restart-button {
-    /* Add your desired button styling here */
     background-color: green;
     color: white;
     font-size: 1.2rem;
@@ -56,17 +60,18 @@
     border: none;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
     transition: all 0.2s ease-in-out;
-    margin-top: 1rem;
+    margin-top: 2rem;
+    position: absolute;
+    top: 52%;
+    left: 52%;
   }
   
   .restart-button:hover {
-    /* Add hover styling for button */
     transform: translateY(-2px);
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.25);
   }
   
   .restart-button:active {
-    /* Add active styling for button */
     transform: translateY(2px);
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.25);
   }
